force-app/main/default/objects/Billing360TransactionRule__mdt/Billing360TransactionRule__mdt.object-meta.xml
<CustomObject>
    <label>Billing360TransactionRule</label>
    <pluralLabel>Billing360TransactionRules</pluralLabel>
</CustomObject>