force-app/main/default/objects/Billing360TransactionRule__mdt/fields/Addon__c.field-meta.xml
<CustomField>
    <fullName>Addon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Addon</label>
    <type>Checkbox</type>
</CustomField>