force-app/main/default/objects/Billing360TransactionRule__mdt/fields/C_R__c.field-meta.xml
<CustomField>
    <fullName>C_R__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C&amp;R</label>
    <type>Checkbox</type>
</CustomField>