force-app/main/default/objects/Billing360TransactionRule__mdt/fields/Co_Term_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Co_Term_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-Term Renewal</label>
    <type>Checkbox</type>
</CustomField>