force-app/main/default/objects/Billing360TransactionRule__mdt/fields/Consolidated_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidated Renewal</label>
    <type>Checkbox</type>
</CustomField>