force-app/main/default/objects/Billing360TransactionRule__mdt/fields/Custom_Billing__c.field-meta.xml
<CustomField>
    <fullName>Custom_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Billing</label>
    <type>Checkbox</type>
</CustomField>