force-app/main/default/objects/Billing360TransactionRule__mdt/fields/Digital_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Digital_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Renewal</label>
    <type>Checkbox</type>
</CustomField>