force-app/main/default/objects/Billing360TransactionRule__mdt/fields/FP_with_Fixed_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FP_with_Fixed_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FP with Fixed End Date</label>
    <type>Checkbox</type>
</CustomField>