force-app/main/default/objects/Billing360TransactionRule__mdt/fields/Legacy_Addon__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Addon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Addon</label>
    <type>Checkbox</type>
</CustomField>