force-app/main/default/objects/Billing360TransactionRule__mdt/fields/Non_Coterm_Addon__c.field-meta.xml
<CustomField>
    <fullName>Non_Coterm_Addon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Coterm Addon</label>
    <type>Checkbox</type>
</CustomField>