force-app/main/default/objects/Billing360TransactionRule__mdt/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Finance</label>
    <type>Checkbox</type>
</CustomField>