force-app/main/default/objects/Billing360TransactionRule__mdt/fields/Regular_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Regular_Renewals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regular Renewals</label>
    <type>Checkbox</type>
</CustomField>