force-app/main/default/objects/Billing360TransactionRule__mdt/fields/Stub_Payment__c.field-meta.xml
<CustomField>
    <fullName>Stub_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stub Payment</label>
    <type>Checkbox</type>
</CustomField>