force-app/main/default/objects/Billing360TransactionRule__mdt/listViews/Admin_List.listView-meta.xml
<ListView>
    <fullName>Admin_List</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>Role__c</columns>
    <columns>Segment__c</columns>
    <columns>Go_Live_Date__c</columns>
    <columns>First_Purchase__c</columns>
    <columns>Addon__c</columns>
    <columns>Non_Coterm_Addon__c</columns>
    <filterScope>Everything</filterScope>
    <label>Admin List</label>
    <language>en_US</language>
</ListView>